# UTN-FRGP-TUP_ProgramacionII_TPIntegrador

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  UML.md  gestor_de_stock.simp
Gestion_De_Stock/: CMakeLists.txt  Cliente.txt  Gestion_De_Stock.cbp  Gestion_De_Stock.cscope_file_list  Gestion_De_Stock.depend  Gestion_De_Stock.layout  Productos.txt  Proveedores.txt  Pruebas.cpp  Pruebas.h  clientes.bak  clientes.csv  facturas.bak  main.cpp  productos.bak  productos.csv  proveedores.bak  proveedores.csv  tipo_responsable.bak  ventas.csv  ventas_items.csv
Gestion_De_Stock/deprecated/: ClientesManager.cpp  ClientesManager.h  Menu.h  clientes.cpp  clientes.h  productos.cpp  ventas.h
Gestion_De_Stock/include/: Base.h  Cliente.h  ClientesManager.h  Comprobante.h  ComprobantesManager.h  DatosPersonales.h  Factura.h  FacturasManager.h  Fecha.h  Gestor.h  Item.h  ItemVenta.h  NotaDeCredito.h  NotaDeCreditosManager.h  Persona.h  Producto.h  ProductoProveedor.h  ProductosManager.h  Proveedor.h  ProveedoresManager.h  TipoResponsable.h
Gestion_De_Stock/src/: Cliente.cpp  Cliente.h  ClientesManager.cpp  ClientesManager.h  Comprobante.cpp  Comprobante.h  ComprobantesManager.cpp  Configuracion.cpp  Configuracion.h  DatosPersonales.cpp  DatosPersonales.h  Factura.cpp  Factura.h  FacturasLista.cpp  FacturasManager.cpp  Fecha.cpp  Fecha.h  Item.cpp  Item.h  Menu.cpp  Menu.h  NotaDeCredito.cpp  NotaDeCredito.h  NotaDeCreditosManager.cpp  Persona.cpp  Producto.cpp  Producto.h  ProductosManager.cpp  ProductosManager.h  Proveedor.cpp  Proveedor.h  ProveedoresManager.cpp  ProveedoresManager.h  TipoResponsable.cpp  TipoResponsablesManager.cpp  TipoResponsablesManager.h  VentasManager.cpp  VentasManager.h  menu.cpp
Gestion_De_Stock/src/controller/: array.cpp  array.h  data_generator.h  fecha.cpp  fecha.h  generic_array.cpp  generic_array.h  modals.h  validation.cpp  validation.h
Gestion_De_Stock/src/controller/data_generator/: client_generator.cpp  client_generator.h  generator.cpp  generator.h  invoice_generator.cpp  invoice_generator.h  ivacondition_generator.cpp  ivacondition_generator.h  product_generator.cpp  product_generator.h  provider_generator.cpp  provider_generator.h  tiporesponsables_generator.cpp  tiporesponsables_generator.h
Gestion_De_Stock/src/controller/modals/: error.cpp  error.h  informational.cpp  (+5 more)
Gestion_De_Stock/src/file_manager/: file_system.cpp  file_system.h
Gestion_De_Stock/src/main_classes/: Cliente.cpp  Cliente.h  DatosPersonales.cpp  DatosPersonales.h  Fecha.cpp  Fecha.h  Producto.cpp  Producto.h  Proveedor.cpp  Proveedor.h  condicion_iva.cpp  condicion_iva.h  datos_personales.cpp  datos_personales.h  tipo_responsable.cpp  tipo_responsable.h
Gestion_De_Stock/src/manager/: cliente_manager.cpp  cliente_manager.h  condicioniva_manager.cpp  condicioniva_manager.h  manager_cliente.cpp  manager_cliente.h  manager_factura.cpp  manager_factura.h  manager_nota_de_credito.cpp  manager_nota_de_credito.h  manager_producto.cpp  manager_producto.h  manager_proveedor.cpp  manager_proveedor.h  manager_tipo_responsables.cpp  manager_tipo_responsables.h  manager_tiporesponsables.cpp  manager_tiporesponsables.h  manager_ventas.cpp  manager_ventas.h  tiporesponsables_manager.cpp  tiporesponsables_manager.h
Gestion_De_Stock/src/menu/: main_menu.cpp  main_menu.h  menu.cpp  menu.h  menu_utils.cpp  menu_utils.h  submenu.h
Gestion_De_Stock/src/reports/: recaudacion_anual.cpp  recaudacion_anual.h  recaudacion_trimestral.cpp  recaudacion_trimestral.h  report.cpp  report.h  top_10_productos.cpp  top_10_productos.h  top_5_fechas.cpp  top_5_fechas.h  top_cliente.cpp  top_cliente.h
(+51 files in other folders)
